--- a/landing.html
+++ b/landing.html
@@ -32,7 +32,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">Biography</a></li>
 							<li><a href="generic.html">Overview</a></li>
-							<li><a href="elements.html">About</a></li>
+							<li><a href="#footer">About</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
