--- a/landing.html
+++ b/landing.html
@@ -52,7 +52,7 @@
 							</header>
 							<div class="content">
 								<p>
-									A biography of a my life, including my experiences and achievements.</p>
+									A biography of my life, including my experiences and achievements.</p>
 							</div>
 						</div>
 					</section>
